--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@primevue/themes": "^4.3.4",
+    "axios": "^1.8.4",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.3",
+    "vue": "^3.5.13",
+    "vue-i18n": "^11.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
