--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
     "vue": "^3.5.13",
-    "vue-i18n": "^11.1.3"
+    "vue-i18n": "^11.1.3",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^6.3.5"
+    "json-server": "^0.17.4",
+    "vite": "^6.3.5",
+    "vite-plugin-vue-devtools": "^7.7.6"
   }
 }
