--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.1.1",
     "@primevue/themes": "^4.3.4",
     "axios": "^1.8.4",
     "primeflex": "^4.0.0",
