--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.6.2",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primevue": "^3.45.0",
+    "primevue": "^3.53.1",
     "vue": "^3.3.11",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5"
@@ -21,7 +21,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "json-server": "^0.17.4",
-    "vite": "^5.0.10",
-    "vite-plugin-vue-devtools": "^0.8.0"
+    "vite": "^5.0.10"
   }
 }
