--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL="http://localhost:3000"
-VITE_CATEGORIES_ENDPOINT_PATH="/"
+VITE_API_BASE_URL="http://localhost:5000"
+VITE_CATEGORIES_ENDPOINT_PATH="/api/v1/"
 VITE_IMGBB_API_KEY="983dcff0d8c6bf8c561d87777850e020"
